# hello-world-python-django

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
hello_world_python_django/: manage.py
hello_world_python_django/hello_world_python_django/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_hello_world_python_django.py
