[tool.poetry]
name = "hello-world-python-django"
version = "0.1.0"
description = ""
authors = ["trackness <40263851+trackness@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
